--- a/app/src/main/res/layout/activity_inloggning.xml
+++ b/app/src/main/res/layout/activity_inloggning.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InloggningActivity">
+    tools:context=".view.InloggningActivity">
 
     <EditText
         android:id="@+id/emailNameText"
