--- a/app/src/main/res/layout/activity_places.xml
+++ b/app/src/main/res/layout/activity_places.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlacesActivity">
+    tools:context=".view.PlacesActivity">
 
     <EditText
         android:id="@+id/landText"
-        android:layout_width="405dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="20dp"
+        android:layout_marginEnd="2dp"
         android:ems="10"
         android:hint="Land"
         android:inputType="textPersonName"
@@ -30,9 +32,11 @@
 
     <EditText
         android:id="@+id/beskrivningText"
-        android:layout_width="408dp"
+        android:layout_width="match_parent"
         android:layout_height="59dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="2dp"
         android:ems="10"
         android:hint="Beskrivning"
         android:inputType="textPersonName"
@@ -43,9 +47,11 @@
 
     <EditText
         android:id="@+id/placeNameText"
-        android:layout_width="409dp"
+        android:layout_width="match_parent"
         android:layout_height="63dp"
+        android:layout_marginStart="2dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="2dp"
         android:ems="10"
         android:hint="Place Name"
         android:inputType="textPersonName"
